2006-09-18  Vlad Seryakov  <seryakov@users.sf.net>

	tcl/http.tcl: Updated and fixed minor bugs in http proxy script

2006-09-17  Vlad Seryakov  <seryakov@users.sf.net>

	* doc/src:
	* doc/html: Moved all .html under src and converted them into doctools format.
	Not all files are in valid doctools format yet but it is matter of editing.

2006-09-15  Vlad Seryakov  <seryakov@users.sf.net>

	* log.c:
	* nsd/server.c:
	* nsd/nsconf.c: Make all path related parameters work
	  the same way:
            - if not specified, use default
            - if absolute, use as given
            - if relative, construct under server home dir

          This affects the following parameters:
	    home, pagedir, library, tcllibrary, initfile, serverlog

2006-09-15  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxymod.c: Registers Ns_Shutdown instead of Ns_Exit
	callback to teardown the proxy.

	* nsproxy/nsproxy.h: Exports Ns_ProxyShutdown instead of 
	Ns_ProxyExit

	* nsproxy/nsproxylib.c: Added new command [ns_proxy stop] which
	kills slaves of the running proxies. Changed format of the result
	of the [ns_proxy active] to be a list of lists. Each sublist is
	in key/value format containing information about the proxy handle,
	the pid of the slave, the start-time and the executing script.
	Also, the command now accepts one optional argument: the handle of
	the proxy for which to return the status report.
	Changed [ns_proxy clear] to require the pool argument.
	The [ns_proxy clear] and [ns_proxy stop] commands are now symetric
	where the former operates on the idle proxies and the latter on the
	running proxies.

	* nsproxy/ns_proxy.man: Updated documentation for new/changed
	commands.

	* tests/ns_proxy.test: Added more tests.

	* nsd/server.c: NsInitServer(): Fixed wrongly calculated path to
	the server-private Tcl library. According to the new simplified
	schema, the path to the private tcl lib is "$home/modules/tcl"